--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -46,7 +46,7 @@
         mat-raised-button
         color="primary"
         type="submit"
-        [disabled]="!formulario.valid || disabled"
+        [disabled]="!formulario.valid"
       >
         <span>Enviar</span>
       </button>
